{
    "name": "TouchControls",
    "maps": [
        {
            "name": "Touch",
            "id": "dec55b80-2a5d-47bd-8f37-67710ed106fc",
            "actions": [
                {
                    "name": "TouchInput",
                    "type": "Button",
                    "id": "1ec5404b-7cc0-407d-9e11-9548c6ca314e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TouchPress",
                    "type": "Button",
                    "id": "d2ee8ea1-7052-4775-8e1a-118ab4f463cb",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TouchPosition",
                    "type": "PassThrough",
                    "id": "7795e7a9-15ea-4dda-846d-bc5d00cd4e3d",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Click",
                    "type": "Button",
                    "id": "84cb1298-bc86-4054-8e8e-a04167660e21",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ClickPosition",
                    "type": "PassThrough",
                    "id": "96a99054-f52c-4aaa-8709-c9214ffd12c0",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "12713f71-c5d3-477b-8fcc-c0e34ee0a865",
                    "path": "<Touchscreen>/primaryTouch/tap",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "TouchInput",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "90bb5145-0357-4d4a-b216-1b5562d46898",
                    "path": "<Touchscreen>/primaryTouch/press",
                    "interactions": "Tap",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "578334ad-da33-4919-a1a7-ecb29bdf6fca",
                    "path": "<Touchscreen>/primaryTouch/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a2f49c2a-75b3-4e6c-b417-7832f2013720",
                    "path": "<Mouse>/{PrimaryAction}",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Click",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c15e6f36-8af7-4208-be8a-d7c681e12d68",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ClickPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}